crates/ty_python_semantic/resources/mdtest/snapshots/yield_and_yield_from…_-_`yield`_and_`yield_f…_-_Error_cases_-_Invalid_`yield`_type_(1300c06a97026cce).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: yield_and_yield_from.md - `yield` and `yield from` - Error cases - Invalid `yield` type
mdtest path: crates/ty_python_semantic/resources/mdtest/expression/yield_and_yield_from.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing import Generator
2 | 
3 | def invalid_generator() -> Generator[int, None, None]:
4 |     # error: [invalid-yield] "Yield type `Literal[""]` does not match annotated yield type `int`"
5 |     yield ""
```

# Diagnostics

```
error[invalid-yield]: Yield expression type does not match annotation
 --> src/mdtest_snippet.py:3:28
  |
1 | from typing import Generator
2 |
3 | def invalid_generator() -> Generator[int, None, None]:
  |                            -------------------------- Function annotated with yield type `int` here
4 |     # error: [invalid-yield] "Yield type `Literal[""]` does not match annotated yield type `int`"
5 |     yield ""
  |           ^^ expression of type `Literal[""]`, expected `int`
  |
info: rule `invalid-yield` is enabled by default

```
