crates/ty_python_semantic/resources/mdtest/snapshots/yield_and_yield_from…_-_`yield`_and_`yield_f…_-_Error_cases_-_Non_generator_functi…_(c14a872d57170530).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: yield_and_yield_from.md - `yield` and `yield from` - Error cases - Non generator function with `Generator` annotation
mdtest path: crates/ty_python_semantic/resources/mdtest/expression/yield_and_yield_from.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing import Generator
2 | 
3 | def non_gen() -> Generator[int, int, None]:
4 |     # error: [invalid-return-type]
5 |     return 1
6 | 
7 | reveal_type(non_gen) # revealed: def non_gen() -> Generator[int, int, None]
```

# Diagnostics

```
error[invalid-return-type]: Return type does not match returned value
 --> src/mdtest_snippet.py:3:18
  |
1 | from typing import Generator
2 |
3 | def non_gen() -> Generator[int, int, None]:
  |                  ------------------------- Expected `Generator[int, int, None]` because of return type
4 |     # error: [invalid-return-type]
5 |     return 1
  |            ^ expected `Generator[int, int, None]`, found `Literal[1]`
6 |
7 | reveal_type(non_gen) # revealed: def non_gen() -> Generator[int, int, None]
  |
info: rule `invalid-return-type` is enabled by default

```
