crates/ty_python_semantic/resources/mdtest/snapshots/yield_and_yield_from…_-_`yield`_and_`yield_f…_-_Error_cases_-_`yield_from`_with_in…_(63388cb3d15fdc10).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: yield_and_yield_from.md - `yield` and `yield from` - Error cases - `yield from` with incompatible send type
mdtest path: crates/ty_python_semantic/resources/mdtest/expression/yield_and_yield_from.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing import Generator
2 | 
3 | def inner() -> Generator[int, int, None]:
4 |     x = yield 1
5 | 
6 | def outer() -> Generator[int, str, None]:
7 |     # error: [invalid-yield] "Send type `int` does not match annotated send type `str`"
8 |     yield from inner()
```

# Diagnostics

```
error[invalid-yield]: Send type does not match annotation
 --> src/mdtest_snippet.py:6:16
  |
4 |     x = yield 1
5 |
6 | def outer() -> Generator[int, str, None]:
  |                ------------------------- Function annotated with send type `str` here
7 |     # error: [invalid-yield] "Send type `int` does not match annotated send type `str`"
8 |     yield from inner()
  |                ^^^^^^^ generator with send type `int`, expected `str`
  |

```
